[package]
name = "rpi4-canbus-server"
version = "0.1.0"
edition = "2021"
default-run = "rpi4-canbus-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketcan = "3.3.0"
embedded-can = "0.4.1"
nmea = "0.6.0"
half = "2.3.1"
anyhow = "1.0.80"
sqlx = {version = "0.7.3",features = ["sqlite","runtime-tokio"]}
tokio = { version = "1.36.0", features = ["full"] }

[[bin]]
name = "rpi4-canbus-server"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
